Some refactoring to have a fixed header/footer in the sidebar
Also fix the scrollbar appearance.

--- a/src/components/MessageBar.css
+++ b/src/components/MessageBar.css
@@ -1,7 +1,7 @@
 .fixedBottom {
     position: fixed;
     bottom: 4rem;
-    left: var(--chat-selection-width);
+    left: var(--sidebar-width);
     right: 0;
 
     display: flex;
